Added missing translations to polish
Added missing translations to polish and sorted translation for english

--- a/src/main/resources/assets/lang/pl.json
+++ b/src/main/resources/assets/lang/pl.json
@@ -2,21 +2,25 @@
   "button.add": "Dodaj",
   "button.cancel": "Anuluj",
   "button.close": "Zamknij",
+  "button.confirm": "Wyjdź",
+  "button.copy": "Kopiuj",
   "button.create": "Utwórz",
-  "button.exit": "Wyjdź",
-  "button.extract": "Wypakuj",
-  "button.save": "Zapisz",
+  "button.download": "Pobierz",
+  "button.extract": "Rozpakuj",
+  "button.restart": "Uruchom ponownie",
   "confirm.skip.copy": "Potwierdź pominięcie oczekujących operacji",
   "context-menu.add": "Dodaj",
   "context-menu.add-to-menu": "Dodaj do menu",
-  "context-menu.compress": "Skompresuj",
+  "context-menu.compress": "Kompresuj",
   "context-menu.copy": "Kopiuj",
+  "context-menu.cut": "Wytnij",
   "context-menu.delete": "Usuń",
-  "context-menu.duplicate": "Duplikuj",
+  "context-menu.duplicate": "Zduplikuj",
   "context-menu.edit": "Edytuj",
-  "context-menu.extract": "Wypakuj",
+  "context-menu.empty": "Opróżnij kosz",
+  "context-menu.extract": "Rozpakuj",
   "context-menu.move-to": "Przenieś do",
-  "context-menu.move-to-parent": "Przenieś do katalogu nadrzędnego",
+  "context-menu.move-to-parent": "Przenieś do nadrzędnego",
   "context-menu.move-to-trash": "Przenieś do kosza",
   "context-menu.new-file": "Nowy plik",
   "context-menu.new-folder": "Nowy folder",
@@ -26,55 +30,125 @@
   "context-menu.remove": "Usuń",
   "context-menu.rename": "Zmień nazwę",
   "context-menu.select-all": "Zaznacz wszystko",
-  "files-menu.example-path": "/ścieżka/do/katalogu",
-  "files-menu.title.add": "Dodaj katalog do menu",
-  "files-menu.title.edit": "Edytuj katalog w menu",
-  "navigate.about-button": "O aplikacji",
-  "navigate.dark-mode": "Tryb ciemny",
+  "menu.desktop": "Pulpit",
+  "menu.documents": "Dokumenty",
+  "menu.downloads": "Pobrane",
+  "menu.home": "Folder domowy",
+  "menu.icon": "Ikona: ",
+  "menu.music": "Muzyka",
+  "menu.path": "Ścieżka: ",
+  "menu.pictures": "Obrazy",
+  "menu.title": "Tytuł: ",
+  "menu.trash": "Kosz",
+  "menu.videos": "Wideo",
+  "navigate.about-button": "O plikach",
   "navigate.hidden-files": "Ukryte pliki",
-  "navigate.light-mode": "Tryb jasny",
-  "tooltip.navigate.reload": "Odśwież",
-  "tooltip.navigate.options": "Wyświel opcje",
+  "navigate.light-mode": "Jasny motyw",
   "navigate.settings": "Ustawienia",
+  "navigation.sorting.date-asc": "Data rosnąco",
+  "navigation.sorting.date-desc": "Data malejąco",
+  "navigation.sorting.name-asc": "Nazwa rosnąco",
+  "navigation.sorting.name-desc": "Nazwa malejąco",
+  "navigation.sorting.size-asc": "Rozmiar rosnąco",
+  "navigation.sorting.size-desc": "Rozmiar malejąco",
   "root.title": "Pliki",
+  "task.copying": "Kopiowanie ",
+  "task.cutting": "Wycinanie ",
+  "task.deleting": "Usuwanie ",
+  "task.duplicating": "Duplikowanie ",
+  "task.item-from": " element z ",
+  "task.item-to": " element do ",
+  "task.items-from": " elementy z ",
+  "task.items-to": " elementy do ",
+  "task.moving": "Przenoszenie ",
   "tooltip.navigate.next": "Następny katalog",
+  "tooltip.navigate.options": "Pokaż opcje",
   "tooltip.navigate.parent": "Katalog nadrzędny",
   "tooltip.navigate.previous": "Poprzedni katalog",
-  "units.bytes": " bajty",
-  "utils.left": "Lewy",
-  "utils.right": "Prawy",
+  "tooltip.navigate.reload": "Odśwież",
+  "tooltip.navigate.sort": "Wybierz sortowanie",
+  "tooltip.navigate.tasks": "Pokaż trwające zadania",
+  "tooltip.navigate.view.grid": "Zmień widok na listę",
+  "tooltip.navigate.view.list": "Zmień widok na siatkę",
+  "units.bytes": " bajtów",
+  "utils.copy": "Kopiuj",
+  "utils.example-path": "/przykładowa/ścieżka",
+  "utils.left": "Lewo",
+  "utils.no": "Nie",
+  "utils.right": "Prawo",
   "utils.title": "Tytuł",
+  "utils.yes": "Tak",
+  "validator.blank-name": "Nazwa nie może być pusta",
   "validator.contains-slash": "Nazwa nie może zawierać ukośników",
   "validator.empty-name": "Nazwa nie może być pusta",
-  "validator.used-name": "Ta nazwa jest już używana",
-  "window.about.about": "O aplikacji",
-  "window.about.creator": "Twórca",
-  "window.about.creator-website": "Strona twórcy",
-  "window.about.description": "Uzyskaj dostęp i zarządzaj swoimi plikami",
-  "window.about.inspiration": "Ta aplikacja jest inspirowana PopOS! 22.04 nautilus",
+  "validator.used-name": "Ta nazwa jest używana",
+  "window.about.about": "O programie",
+  "window.about.creator": "Autor",
+  "window.about.creator-website": "Strona autora",
+  "window.about.description": "Uzyskuj dostęp i organizuj pliki",
+  "window.about.inspiration": "Ta aplikacja jest inspirowana PopOS! 22.04 Nautilusem",
   "window.about.title": "O Aloe",
   "window.about.used-icons": "Ta aplikacja używa ikon z:",
-  "window.about.warranty": "Program nie zapewnia żadnej gwarancji.",
+  "window.about.warranty": "Ten program jest dostarczany bez jakiejkolwiek gwarancji.",
   "window.about.website": "Strona projektu",
-  "window.archive.compress": "Użyj kompresji",
   "window.archive.compress.error": "Błąd podczas kompresji!",
-  "window.archive.compress.success": "Kompresja zakończona sukcesem!",
-  "window.archive.extract.enter-password": "Wprowadź hasło:",
-  "window.archive.extract.error": "Błąd podczas wypakowania!",
-  "window.archive.extract.success": "Wypakowanie zakończone sukcesem!",
-  "window.archive.extract.wrong-password": "Błędne hasło!",
-  "window.archive.file-name": "Nazwa pliku:",
-  "window.archive.password": "Użyj hasła",
-  "window.archive.title": "Utwórz archiwum",
+  "window.archive.compress.success": "Kompresja zakończona pomyślnie!",
+  "window.archive.extract.error": "Błąd podczas rozpakowywania!",
+  "window.archive.extract.success": "Rozpakowywanie zakończone pomyślnie!",
+  "window.archive.extract.wrong-password": "Nieprawidłowe hasło!",
+  "window.confirm.confirm-action": "Potwierdź akcję",
   "window.decision.combine-directory": "Połącz foldery",
-  "window.decision.copy-next-to": "Kopiuj obok",
-  "window.decision.destination-has-directory": "Miejsce docelowe już zawiera folder o nazwie: ",
-  "window.decision.destination-has-file": "Miejsce docelowe już zawiera plik o nazwie: ",
+  "window.decision.copy-next-to": "Skopiuj obok",
+  "window.decision.destination-has-directory": "W destinacji istnieje już folder o nazwie: ",
+  "window.decision.destination-has-file": "W destinacji istnieje już plik o nazwie: ",
   "window.decision.replace.directory": "Zastąp folder",
   "window.decision.replace.file": "Zastąp plik",
   "window.decision.skip.directory": "Pomiń ten folder",
   "window.decision.skip.file": "Pomiń ten plik",
   "window.decision.title": "Zastąpić czy pominąć",
+  "window.file-box.modified": "Zmodyfikowano",
+  "window.file-box.name": "Nazwa",
+  "window.file-box.size": "Rozmiar",
+  "window.interior.archive": "Archiwum",
+  "window.interior.archive.create": "Utwórz",
+  "window.interior.archive.extract.enter-password": "Wprowadź hasło",
+  "window.interior.archive.extract.password-required": "To archiwum jest chronione hasłem",
+  "window.interior.archive.name": "Nazwa pliku",
+  "window.interior.archive.password": "Hasło",
+  "window.interior.archive.title": "Utwórz archiwum",
+  "window.interior.directory.create": "Utwórz",
+  "window.interior.directory.create-folder": "Utwórz folder",
+  "window.interior.directory.name": "Nazwa folderu",
+  "window.interior.directory.placeholder": "Nowy folder",
+  "window.interior.file.create": "Utwórz",
+  "window.interior.file.create-file": "Utwórz plik",
+  "window.interior.file.name": "Nazwa pliku",
+  "window.interior.file.placeholder": "Nowy plik.txt",
+  "window.interior.menu.add": "Dodaj katalog do menu",
+  "window.interior.menu.example-path": "/ścieżka/do/katalogu",
+  "window.interior.menu.icon": "Ikona",
+  "window.interior.menu.path": "Ścieżka",
+  "window.interior.menu.save": "Zapisz",
+  "window.interior.menu.title": "Tytuł",
+  "window.interior.rename": "Zmień nazwę",
+  "window.interior.rename.directory": "Zmień nazwę folderu",
+  "window.interior.rename.file": "Zmień nazwę pliku",
+  "window.other.chose-directory": "Wybierz folder",
+  "window.other.chose-file": "Wybierz plik",
+  "window.properties": "Właściwości",
+  "window.properties.calculating": "Obliczanie...",
+  "window.properties.checksum": "Suma kontrolna",
+  "window.properties.checksum.chose-algorithm": "Wybierz algorytm: ",
+  "window.properties.checksum.enter-checksum": "Wprowadź sumę kontrolną",
+  "window.properties.checksum.generate": "Generuj sumę",
+  "window.properties.checksum.generate-hash": "Generuj",
+  "window.properties.checksum.generating": "Generowanie...",
+  "window.properties.checksum.verify": "Weryfikuj plik",
+  "window.properties.checksum.verify-checksum": "Weryfikuj",
+  "window.properties.checksum.verify.equals": "Suma kontrolna jest poprawna. Plik nie został zmodyfikowany.",
+  "window.properties.checksum.verify.not-equals": "Suma kontrolna nie zgadza się! Plik może być uszkodzony lub zmodyfikowany.",
+  "window.properties.confirm.description": "Na twoim urządzeniu nie ma zainstalowanego FFmpeg, które jest wymagane do odczytu informacji z plików wideo",
+  "window.properties.confirm.title": "Brak zainstalowanego FFmpeg",
   "window.properties.file-created": "Utworzono: ",
   "window.properties.file-modified": "Zmodyfikowano: ",
   "window.properties.file-name": "Nazwa: ",
@@ -82,65 +156,120 @@
   "window.properties.file-path": "Ścieżka: ",
   "window.properties.file-properties": "Właściwości pliku",
   "window.properties.file-size": "Rozmiar: ",
-  "window.properties.file-type": "Typ: ",
+  "window.properties.file.show": "pokaż",
   "window.properties.folder": "Folder",
   "window.properties.folder-contents": "Zawartość: ",
   "window.properties.folder-properties": "Właściwości folderu",
   "window.properties.free-space": "Wolne miejsce: ",
+  "window.properties.image": "Obraz: ",
+  "window.properties.image-properties": "Właściwości obrazu",
+  "window.properties.image.camera-mode": "Tryb aparatu: ",
+  "window.properties.image.camera-mode.action-mode": "Tryb akcji",
+  "window.properties.image.camera-mode.aperture-priority": "Priorytet przysłony",
+  "window.properties.image.camera-mode.auto": "Auto",
+  "window.properties.image.camera-mode.creative-mode": "Tryb kreatywny",
+  "window.properties.image.camera-mode.landscape": "Krajobraz",
+  "window.properties.image.camera-mode.manual": "Ręczny",
+  "window.properties.image.camera-mode.other": "Inny",
+  "window.properties.image.camera-mode.portrait": "Portret",
+  "window.properties.image.camera-mode.shutter-priority": "Priorytet migawki",
+  "window.properties.image.compression": "Kompresja: ",
+  "window.properties.image.f-number": "Przysłona: ",
+  "window.properties.image.has-alpha": "Posiada alfę: ",
+  "window.properties.image.iso": "ISO: ",
+  "window.properties.image.orientation": "Orientacja: ",
+  "window.properties.image.orientation.mirror-horizontal": "Odbicie poziome",
+  "window.properties.image.orientation.mirror-vertical": "Odbicie pionowe",
+  "window.properties.image.orientation.normal": "Normalna",
+  "window.properties.image.orientation.rotate-180": "Obróć o 180°",
+  "window.properties.image.orientation.rotate-90-left": "Obróć o 90° w lewo",
+  "window.properties.image.orientation.rotate-90-left-mirror": "Obróć o 90° w lewo i odbij",
+  "window.properties.image.orientation.rotate-90-right": "Obróć o 90° w prawo",
+  "window.properties.image.orientation.rotate-90-right-mirror": "Obróć o 90° w prawo i odbij",
+  "window.properties.image.software": "Oprogramowanie: ",
+  "window.properties.item": " element",
   "window.properties.items": " elementy",
-  "window.settings.menu": "Menu",
-  "window.settings.files": "Pliki",
-  "window.settings.menu.menu-position": "Pozycja menu",
-  "window.settings.title": "Ustawienia",
-  "window.settings.menu.use-menu": "Wyświetlaj menu plików",
-  "window.settings.menu.use-icon": "Wyświetlaj ikony",
-  "window.settings.menu.use-text": "Wyświetlaj tekst",
-  "window.settings.files.show-hidden-files": "Wyświetlaj ukryte pliki",
-  "window.settings.files.use-binary-units": "Używaj jednostek binarnych",
-  "window.settings.files.start-folder": "Katalog startowy",
-  "window.settings.files.start-folder-location": "Lokalizacja katalogu startowego",
-  "window.settings.files.start-folder.home": "Domowy",
-  "window.settings.files.start-folder.last": "Ostatni",
-  "window.settings.files.start-folder.custom": "Własny",
-  "window.settings.files.delete-archive-after-extract": "Usuń archiwum po wypakowaniu",
-  "window.settings.files.display-thumbnails": "Wyświetl miniatury obrazów",
-  "window.settings.files.file-box-size": "Rozmiar pudełko z plikiem",
-  "window.settings.files.file-box-size.small": "Mały",
-  "window.settings.files.file-box-size.large": "Wielki",
-  "window.settings.files.view": "Widok",
-  "window.settings.files.view.grid": "Siatka",
-  "window.settings.files.view.list": "Lista",
-  "window.properties": "Właściwości",
-  "window.archive.extract.password-required": "Archiwum jest chronione hasłem",
-  "window.settings.language": "Język",
-  "window.settings.menu.description": "Widok menu, pozycja i elementy",
-  "window.settings.files.description": "Rozmiar, archiwa, katalog startowy, ukryte pliki i więcej",
-  "window.settings.language.description": "Język i formaty czasu",
-  "window.settings.back-to-menu": "Powrót do menu",
-  "window.settings.files.display-directories-before-files": "Wyświetlaj katalogi przed plikami",
+  "window.properties.media.camera": "Aparat: ",
+  "window.properties.media.gps-date": "Data GPS: ",
+  "window.properties.media.gps-height": "Wysokość GPS: ",
+  "window.properties.media.gps-time": "Czas GPS: ",
+  "window.properties.media.gps-width": "Szerokość GPS: ",
+  "window.properties.media.height": "Wysokość: ",
+  "window.properties.media.type": "Typ: ",
+  "window.properties.media.width": "Szerokość: ",
+  "window.properties.permissions": "Uprawnienia",
+  "window.properties.permissions.acl.append-data": "Dodawanie danych",
+  "window.properties.permissions.acl.delete": "Usuwanie",
+  "window.properties.permissions.acl.delete-child": "Usuwanie dziecka",
+  "window.properties.permissions.acl.execute": "Wykonywanie",
+  "window.properties.permissions.acl.read-acl": "Odczyt ACL",
+  "window.properties.permissions.acl.read-attributes": "Odczyt atrybutów",
+  "window.properties.permissions.acl.read-data": "Odczyt danych",
+  "window.properties.permissions.acl.read-named-attrs": "Odczyt nazwanych atrybutów",
+  "window.properties.permissions.acl.synchronize": "Synchronizacja",
+  "window.properties.permissions.acl.write-acl": "Zapis ACL",
+  "window.properties.permissions.acl.write-attributes": "Zapis atrybutów",
+  "window.properties.permissions.acl.write-data": "Zapis danych",
+  "window.properties.permissions.acl.write-named-attrs": "Zapis nazwanych atrybutów",
+  "window.properties.permissions.acl.write-owner": "Zapis właściciela",
+  "window.properties.permissions.apply-to-subdirectories": "Zastosuj do podkatalogów",
+  "window.properties.permissions.chose-user": "Wybierz użytkownika: ",
+  "window.properties.permissions.execute": "Wykonaj: ",
+  "window.properties.permissions.group": "Grupa: ",
+  "window.properties.permissions.modify-permissions": "Modyfikuj uprawnienia",
+  "window.properties.permissions.other": "Inni: ",
+  "window.properties.permissions.owner": "Właściciel: ",
+  "window.properties.permissions.read": "Odczyt: ",
+  "window.properties.permissions.update": "Aktualizuj",
+  "window.properties.permissions.write": "Zapis: ",
+  "window.properties.video": "Wideo: ",
+  "window.properties.video-properties": "Właściwości wideo",
+  "window.properties.video.bitrate": "Prędkość transmisji: ",
+  "window.properties.video.channel": "Kanał: ",
+  "window.properties.video.codec": "Kodek: ",
+  "window.properties.video.duration": "Czas trwania: ",
+  "window.properties.video.fps": "FPS: ",
   "window.settings.appearance": "Wygląd",
-  "window.settings.appearance.description": "Zmień motyw i kolor akcentujący",
+  "window.settings.appearance.color": "Kolor akcentu",
+  "window.settings.appearance.description": "Zmień motyw i kolor akcentu",
   "window.settings.appearance.theme": "Motyw",
   "window.settings.appearance.theme.dark": "Ciemny",
   "window.settings.appearance.theme.light": "Jasny",
-  "window.properties.calculating": "Obliczanie...",
-  "window.properties.checksum": "Sumy kontrolne",
-  "window.properties.checksum.verify": "Zweryfikuj plik",
-  "button.copy": "Kopiuj",
-  "window.properties.checksum.generate": "Generuj sumę kontrolną",
-  "window.properties.checksum.chose-algorithm": "Wybierz algorytm: ",
-  "window.properties.checksum.generate-hash": "Generuj",
-  "window.properties.checksum.enter-checksum": "Wprowadź sumę kontrolną",
-  "window.properties.checksum.verify-checksum": "Zweryfikuj",
-  "window.properties.checksum.verify.not-equals": "Suma kontrolna nie pasuje! Plik może być uszkodzony lub zmodyfikowany.",
-  "window.properties.checksum.verify.equals": "Suma kontrolna jest poprawna. Plik nie został zmodyfikowany.",
-  "window.properties.permissions": "Uprawnienia",
-  "window.properties.permissions.read": "Odczyt: ",
-  "window.properties.permissions.write": "Zapis: ",
-  "window.properties.permissions.execute": "Wykonywanie: ",
-  "window.properties.permissions.owner": "Właściciel: ",
-  "window.properties.permissions.group": "Grupa: ",
-  "window.properties.permissions.other": "Inni: ",
-  "window.properties.permissions.update": "Aktualizuj",
-  "window.properties.permissions.apply-to-subdirectories": "Zastosuj do podkatalogów"
+  "window.settings.back-to-menu": "Powrót do menu",
+  "window.settings.confirm.description": "Aby zmiany zaczęły działać, wymagane jest ponowne uruchomienie aplikacji",
+  "window.settings.confirm.title": "Wymagane ponowne uruchomienie aplikacji",
+  "window.settings.files": "Pliki",
+  "window.settings.files.delete-archive-after-extract": "Usuń archiwum po rozpakowaniu",
+  "window.settings.files.description": "Rozmiar, archiwa, folder startowy, ukryte pliki i więcej",
+  "window.settings.files.display-directories-before-files": "Wyświetlaj foldery przed plikami",
+  "window.settings.files.display-thumbnails": "Wyświetlaj podgląd miniatur",
+  "window.settings.files.extract-on-click": "Rozpakuj po kliknięciu",
+  "window.settings.files.file-box-size": "Rozmiar okna plików",
+  "window.settings.files.file-box-size.large": "Duży",
+  "window.settings.files.file-box-size.small": "Mały",
+  "window.settings.files.show-hidden-files": "Pokaż ukryte pliki",
+  "window.settings.files.start-folder": "Folder startowy",
+  "window.settings.files.start-folder-location": "Lokalizacja folderu startowego",
+  "window.settings.files.start-folder.custom": "Niestandardowy",
+  "window.settings.files.start-folder.home": "Domowy",
+  "window.settings.files.start-folder.last": "Ostatni",
+  "window.settings.files.trash-location": "Lokalizacja kosza",
+  "window.settings.files.use-binary-units": "Używaj jednostek binarnych",
+  "window.settings.files.use-double-click": "Użyj podwójnego kliknięcia do otwarcia pliku",
+  "window.settings.files.view": "Widok",
+  "window.settings.files.view.grid": "Siatka",
+  "window.settings.files.view.list": "Lista",
+  "window.settings.language": "Język",
+  "window.settings.language.description": "Formaty języka i czasu",
+  "window.settings.menu": "Menu",
+  "window.settings.menu.description": "Widok menu, pozycja i elementy",
+  "window.settings.menu.edit-order": "Edytuj kolejność",
+  "window.settings.menu.icons-page": "Strona ikon",
+  "window.settings.menu.item-info": "Informacje o elemencie",
+  "window.settings.menu.menu-position": "Pozycja menu",
+  "window.settings.menu.select-item": "Wybierz element, aby pokazać informacje",
+  "window.settings.menu.use-icon": "Wyświetlaj ikonę",
+  "window.settings.menu.use-menu": "Wyświetl menu plików",
+  "window.settings.menu.use-text": "Wyświetl tekst",
+  "window.settings.title": "Ustawienia"
 }
