Added context menu for disks
Added context menu for disks

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -277,5 +277,6 @@
   "window.empty-folder": "Empty folder",
   "windows.properties.access-denied": "You do not have permission to view this information",
   "menu.disks": "Disks",
-  "window.interior.menu.edit": "Edit Directory in Menu"
+  "window.interior.menu.edit": "Edit Directory in Menu",
+  "utils.available-space": "available"
 }
