--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -295,5 +295,15 @@
   "window.properties.partition.total-space": "Total space: ",
   "window.properties.partition.uuid": "UUID: ",
   "window.properties.partition.options": "Options: ",
-  "window.properties.partition": "Partition"
+  "window.properties.partition": "Partition",
+  "navigate.shortcuts": "Shortcuts",
+  "window.shortcuts.copy": "Copy",
+  "window.shortcuts.cut": "Cut",
+  "window.shortcuts.paste": "Paste",
+  "window.shortcuts.select-all": "Select all",
+  "window.shortcuts.refresh": "Refresh",
+  "window.shortcuts.delete": "Delete",
+  "window.shortcuts.move-to-trash": "Move to trash",
+  "window.shortcuts.rename": "Rename",
+  "window.shortcuts": "Keyboard Shortcuts"
 }
