Added option to reset settings to default
Added option to reset settings to default

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -308,5 +308,6 @@
   "window.shortcuts.delete": "Delete",
   "window.shortcuts.move-to-trash": "Move to trash",
   "window.shortcuts.rename": "Rename",
-  "window.shortcuts": "Keyboard Shortcuts"
+  "window.shortcuts": "Keyboard Shortcuts",
+  "window.settings.reset": "Reset to factory settings"
 }
