--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -45,12 +45,12 @@
   "navigate.hidden-files": "Hidden files",
   "navigate.light-mode": "Light Mode",
   "navigate.settings": "Settings",
-  "navigation.sorting.date-asc": "Date ascending",
-  "navigation.sorting.date-desc": "Date descending",
-  "navigation.sorting.name-asc": "Name ascending",
-  "navigation.sorting.name-desc": "Name descending",
-  "navigation.sorting.size-asc": "Size ascending",
-  "navigation.sorting.size-desc": "Size descending",
+  "navigation.sorting.dateasc": "Date ascending",
+  "navigation.sorting.datedesc": "Date descending",
+  "navigation.sorting.nameasc": "Name ascending",
+  "navigation.sorting.namedesc": "Name descending",
+  "navigation.sorting.sizeasc": "Size ascending",
+  "navigation.sorting.sizedesc": "Size descending",
   "root.title": "Files",
   "task.copying": "Copying ",
   "task.cutting": "Cutting ",
